# remy-robotics-test

./: Dockerfile  README.md  docker-compose.yml
catkin_ws/src/pick_and_place/: CMakeLists.txt  package.xml
catkin_ws/src/pick_and_place/cfg/: pick_and_place_params.yaml
catkin_ws/src/pick_and_place/include/pick_and_place/: pick_and_place.hpp
catkin_ws/src/pick_and_place/launch/: move.launch  pick_and_place.launch
catkin_ws/src/pick_and_place/src/: pick_and_place.cpp  pick_and_place_node.cpp
catkin_ws/src/robot_moveit_config/: .setup_assistant  package.xml
catkin_ws/src/robot_moveit_config/config/: fake_controllers.yaml  gazebo_ur_robot_gazebo.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml  ur5e_controllers.yaml  ur_robot_gazebo.srdf
catkin_ws/src/robot_moveit_config/launch/: demo.launch  gazebo.launch  planning_context.launch  sensor_manager.launch.xml
catkin_ws/src/simple_scene/launch/: robot_bringup.launch
